--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- Main stylesheet -->
     <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="BIO msihek" />
-    <meta property="og:url" content="https://cheatin.fun/" />
-    <meta property="og:image" content="https://cheatin.fun/favicon.png" />
+    <meta property="og:url" content="https://msihek-bio.vercel.app/" />
+    <meta property="og:image" content="https://msihek-bio.vercel.app/favicon.png" />
 </head>
 
 <body>
